feat: [PL-43140]: Central certificate management, create certificate API (#57209)
* feat: [PL-43140]: Central certificate management, create certificate API

* feat: [PL-43140]: Central certificate management, create certificate API

* feat: [PL-43140]: Schema and related changes (to support  project migration)

* feat: [PL-43140]: Added UTs

* feat: [PL-43140]: Fixed bazel file format

* feat: [PL-43140]: Added more UTs

* feat: [PL-43140]: Addressed review comments

* feat: [PL-43140]: Removed wrong e.g. from openapi

* feat: [PL-43140]: Checkstyle fix

* feat: [PL-43140]: Fixed display name for tags

* feat: [PL-43140]: Checkstyle fix

* feat: [PL-43140]: Corrected endpoint

* feat: [PL-43140]: Removed account identifier as arg of method

* feat: [PL-43140]: Added indexes to indexes.txt

* feat: [PL-43140]: review comment changes

* feat: [PL-43140]: review comment changes

* feat: [PL-43140]: fixed test case

* feat: [PL-43140]: field name changes as per review comment
