# 120-ng-manager/contracts/openapi/v1/openapi.yaml
@@ -56,6 +56,15 @@ tags:
   - name: EULA
     description: This contains APIs for EULA.
     x-displayName: 'EULA [Beta]'
+  - name: Account Certificate
+    description: This contains APIs for account-scoped Certificates
+    x-displayName: 'Account Certificates [Beta]'
+  - name: Org Certificate
+    description: This contains APIs for organization-scoped Certificates
+    x-displayName: 'Org Certificates [Beta]'
+  - name: Project Certificate
+    description: This contains APIs for project-scoped Certificates
+    x-displayName: 'Project Certificates [Beta]'
   - name: IP Allowlist
     description: This contains APIs for IP Allowlist.
     x-displayName: 'IP Allowlist [Beta]'
@@ -2024,6 +2033,86 @@ paths:
         - $ref: '#/components/parameters/AccountHeader'
       requestBody:
         $ref: '#/components/requestBodies/UpdateGitXWebhookEventRequest'
+  /v1/certificates:
+    get:
+      summary: Retrieves the list of Certificates in account scope
+      tags:
+        - Account Certificate
+      responses: {}
+      operationId: get-account-scoped-certificates
+      description: Retrieves the list of certificates in account scope
+      x-internal: true
+    post:
+      summary: Creates a new Certificate in account scope
+      operationId: create-account-scoped-certificates
+      responses:
+        '201':
+          $ref: '#/components/responses/CertificateResponse'
+      description: Creates a new certificate in account scope
+      parameters:
+        - $ref: '#/components/parameters/AccountHeader'
+      tags:
+        - Account Certificate
+      security:
+        - x-api-key: []
+      requestBody:
+        $ref: '#/components/requestBodies/CreateCertificateRequest'
+      x-internal: true
+  '/v1/orgs/{org}/certificates':
+    parameters:
+      - $ref: '#/components/parameters/OrgPathParam'
+    get:
+      summary: Retrieves the list of Certificates in organization scope
+      tags:
+        - Org Certificate
+      responses: {}
+      operationId: get-org-scoped-certificates
+      x-internal: true
+      description: Retrieves the list of certificates in organization scope
+    post:
+      summary: Creates a new Certificate in organization scope
+      operationId: create-org-scoped-certificates
+      responses:
+        '201':
+          $ref: '#/components/responses/CertificateResponse'
+      description: Creates a new certificate in organization scope
+      security:
+        - x-api-key: []
+      parameters:
+        - $ref: '#/components/parameters/AccountHeader'
+      requestBody:
+        $ref: '#/components/requestBodies/CreateCertificateRequest'
+      x-internal: true
+      tags:
+        - Org Certificate
+  '/v1/orgs/{org}/projects/{project}/certificates':
+    parameters:
+      - $ref: '#/components/parameters/OrgPathParam'
+      - $ref: '#/components/parameters/ProjectPathParam'
+    get:
+      summary: Retrieves the list of Certificates in project scope
+      tags:
+        - Project Certificate
+      responses: {}
+      operationId: get-project-scoped-certificates
+      description: Retrieves the list of certificates in project scope
+      x-internal: true
+    post:
+      summary: Creates a new Certificate in project scope
+      operationId: create-project-scoped-certificates
+      responses:
+        '201':
+          $ref: '#/components/responses/CertificateResponse'
+      description: Creates a new certificate in project scope
+      security:
+        - x-api-key: []
+      parameters:
+        - $ref: '#/components/parameters/AccountHeader'
+      requestBody:
+        $ref: '#/components/requestBodies/CreateCertificateRequest'
+      x-internal: true
+      tags:
+        - Project Certificate
 components:
   schemas:
     Service:
@@ -3365,6 +3454,191 @@ components:
           type: string
           x-stoplight:
             id: nrriy895o9ami
+    CertificateDTO:
+      title: CertificateDTO
+      x-stoplight:
+        id: zfhh1pil05dnf
+      description: This is the request dto to create a Certificate in Harness
+      allOf:
+        - $ref: '#/components/schemas/CertificateInfoDTO'
+        - type: object
+          properties:
+            input_spec:
+              $ref: '#/components/schemas/CertificateInputSpecDTO'
+          required:
+            - input_spec
+    CertificateInfoDTO:
+      title: CertificateInfoDTO
+      x-stoplight:
+        id: 6p0826ulsrwtd
+      type: object
+      description: This is the Certificate Entity in Harness
+      properties:
+        name:
+          type: string
+          x-stoplight:
+            id: gj2z790yvuanb
+          description: Name for the Entity.
+          pattern: '^[0-9a-zA-Z-_ ]{0,127}$'
+          minLength: 1
+          maxLength: 128
+        identifier:
+          type: string
+          x-stoplight:
+            id: p4qt8g2e8rs7w
+          description: Identifier for the Entity.
+          pattern: '^[a-zA-Z_][0-9a-zA-Z_$]{0,127}$'
+          minLength: 1
+          maxLength: 128
+        org:
+          type: string
+          x-stoplight:
+            id: k5d8u96v06nq2
+          description: Organization Identifier for the Entity.
+          pattern: '^[a-zA-Z_][0-9a-zA-Z_$]{0,127}$'
+          minLength: 1
+          maxLength: 128
+        project:
+          type: string
+          x-stoplight:
+            id: l3l5qc3xg12ti
+          description: Project Identifier for the Entity.
+          pattern: '^[a-zA-Z_][0-9a-zA-Z_$]{0,127}$'
+          minLength: 1
+          maxLength: 128
+        certificate_value:
+          type: string
+          x-stoplight:
+            id: rj5ltf1o8cjzl
+          description: Certificate Content (Read only field whose value is populated only in response)
+          readOnly: true
+        tags:
+          type: object
+          additionalProperties:
+            type: string
+          x-stoplight:
+            id: nc3zk5b4umlrc
+          description: Certificate tags
+        description:
+          type: string
+          x-stoplight:
+            id: tcp3v2qvwmtaj
+      required:
+        - name
+        - identifier
+    CertificateInputSpecDTO:
+      title: CertificateInputSpecDTO
+      x-stoplight:
+        id: afp3aq9340zpo
+      type: object
+      discriminator:
+        propertyName: type
+        mapping:
+          TEXT: '#/components/schemas/TextCertificateInputSpecDTO'
+          FILE: '#/components/schemas/FileCertificateInputSpecDTO'
+      properties:
+        type:
+          $ref: '#/components/schemas/CertificateInputSpecType'
+      required:
+        - type
+      description: ''
+    TextCertificateInputSpecDTO:
+      title: TextCertificateInputSpecDTO
+      x-stoplight:
+        id: qi4ofy32l45g2
+      allOf:
+        - $ref: '#/components/schemas/CertificateInputSpecDTO'
+        - type: object
+          x-stoplight:
+            id: fmagg7joe70sg
+          properties:
+            value:
+              type: string
+              x-stoplight:
+                id: o9qlhwwuvpz15
+          required:
+            - value
+      description: This DTO defines the fields required when creating a certificate by passing it as text.
+      x-discriminator-value: TEXT
+    FileCertificateInputSpecDTO:
+      title: FileCertificateInputSpecDTO
+      x-stoplight:
+        id: yd3tryqahooqh
+      allOf:
+        - $ref: '#/components/schemas/CertificateInputSpecDTO'
+      description: This DTO defines the fields required when creating a certificate by passing it as text.
+      x-discriminator-value: FILE
+    CertificateResponseDTO:
+      title: CertificateResponseDTO
+      x-stoplight:
+        id: 6wrym3s17lpag
+      type: object
+      properties:
+        certificate:
+          $ref: '#/components/schemas/CertificateDTO'
+        certificate_details:
+          $ref: '#/components/schemas/CertificateDetailsDTO'
+        created:
+          type: integer
+          x-stoplight:
+            id: xwyyv6is1tt0d
+          format: int64
+        updated:
+          type: integer
+          x-stoplight:
+            id: mr8wiuq1rpalf
+          format: int64
+    CertificateDetailsDTO:
+      title: CertificateDetailsDTO
+      x-stoplight:
+        id: gvy1mcfyu6eh5
+      type: object
+      properties:
+        issued_to:
+          $ref: '#/components/schemas/CertificateIssuanceInfo'
+        issued_by:
+          $ref: '#/components/schemas/CertificateIssuanceInfo'
+        valid_from:
+          type: integer
+          x-stoplight:
+            id: aly0e54frmxb5
+          format: int64
+        valid_to:
+          type: integer
+          x-stoplight:
+            id: veroiszk9kr6m
+          format: int64
+        signature_algo:
+          type: string
+          x-stoplight:
+            id: vrgcfez9e1hed
+    CertificateInputSpecType:
+      title: CertificateInputSpecType
+      x-stoplight:
+        id: 2wh6gi4mmqtna
+      type: string
+      enum:
+        - TEXT
+        - FILE
+      description: This defines different ways a certificate can be created
+    CertificateIssuanceInfo:
+      title: CertificateIssuanceInfo
+      x-stoplight:
+        id: 0boi3xjtopi3g
+      type: object
+      properties:
+        common_name:
+          type: string
+          x-stoplight:
+            id: pmkisjnl0wz4w
+        organization:
+          type: string
+          x-stoplight:
+            id: qk5go8wmj37d1
+        organizational_unit:
+          type: string
+          x-stoplight:
+            id: 3te747zr0xli1
   securitySchemes:
     x-api-key:
       name: x-api-key
@@ -4072,6 +4346,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/DeleteGitXWebhookResponse'
+    CertificateResponse:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CertificateResponseDTO'
   requestBodies:
     ServiceRequest:
       content:
@@ -4592,6 +4872,9 @@ components:
             required:
               - file
               - spec
+          encoding:
+            spec:
+              contentType: application/json
       required: true
     SecretValidationRequest:
       content:
@@ -4659,6 +4942,40 @@ components:
           schema:
             $ref: '#/components/schemas/UpdateGitXWebhookEventRequest'
       description: Update GitX Webhook Event Request
+    CreateCertificateRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CertificateDTO'
+          examples:
+            example-certificate-input-text:
+              value:
+                name: example_name
+                identifier: example_identifier
+                org: example_org
+                project: example_project
+                certificateValue: actual_certificate_content
+                tags:
+                  property1: tag1
+                  property2: tag2
+                description: example_description
+                inputSpec:
+                  type: TEXT
+        multipart/form-data:
+          schema:
+            type: object
+            properties:
+              spec:
+                $ref: '#/components/schemas/CertificateDTO'
+              file:
+                type: string
+                x-stoplight:
+                  id: 0oicqmnn2p8ce
+                format: binary
+            required:
+              - spec
+              - file
+          examples: {}
   parameters:
     Page:
       name: page
